test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-shared-from-nonnil-unmanaged.good
init-field-dflt-nonnil-shared-from-nonnil-unmanaged.chpl:8: error: cannot initialize field MyRecord.lhs of type 'shared MyClass' from a 'unmanaged MyClass'
